[tool.poetry]
name = "django-carrot"
version = "2.0.1"
description = "A RabbitMQ asynchronous task queue for Django."
authors = ["Christoper Davies <christopherdavies553@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/chris104957/django-carrot"
homepage = "https://django-carrot.readthedocs.io"
readme = "README.rst"
classifiers = [
    'Environment :: Web Environment',
    'Development Status :: 5 - Production/Stable',
    'Framework :: Django',
    'Framework :: Django :: 5.0',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.11',
    'Topic :: Internet :: WWW/HTTP',
    'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
]
packages = [
    { include = "carrot" }
]


[tool.poetry.dependencies]
python = "^3.6.3"
djangorestframework = "^3.9"
pika = "^0.13.1"
json2html = "^1.2"
django = "^5.0.0"
psutil = "^5.6"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
mock = "^2.0"
python-coveralls = "^2.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
